[gd_scene load_steps=6 format=3 uid="uid://bmiu7hsj0vjlm"]

[ext_resource type="Texture2D" uid="uid://cfpnwrfbjmq36" path="res://ui_scenes/playerHUD/crafting/craftingIcon.png" id="1_mkfej"]
[ext_resource type="Texture2D" uid="uid://dxrj65dnng3s3" path="res://items/tools/bucket/magicBucket.png" id="2_3ra28"]
[ext_resource type="Script" uid="uid://c7ehaq6ajc1qq" path="res://item_resources/crafting/scenes/crafting_slot.gd" id="2_srdjm"]
[ext_resource type="FontFile" uid="uid://c3vw44vws5n61" path="res://zeeg/font/I-pixel-u.ttf" id="3_7akce"]

[sub_resource type="LabelSettings" id="LabelSettings_qx630"]
resource_local_to_scene = true
font = ExtResource("3_7akce")
font_size = 8
font_color = Color(0.854902, 0.878431, 0.901961, 1)
outline_size = 5
outline_color = Color(0.0823529, 0.113725, 0.156863, 1)

[node name="CraftingSlot" type="NinePatchRect"]
custom_minimum_size = Vector2(24, 24)
offset_right = 24.0
offset_bottom = 24.0
texture = ExtResource("1_mkfej")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
script = ExtResource("2_srdjm")

[node name="sprite" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3ra28")
stretch_mode = 3

[node name="spritePreview" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3ra28")
stretch_mode = 3

[node name="amount" type="Label" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 16.0
offset_right = 24.0
offset_bottom = 26.0
text = "99"
label_settings = SubResource("LabelSettings_qx630")
horizontal_alignment = 2

[node name="craftButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 21.0
offset_bottom = 21.0

[connection signal="mouse_entered" from="craftButton" to="." method="_on_craft_button_mouse_entered"]
[connection signal="mouse_exited" from="craftButton" to="." method="_on_craft_button_mouse_exited"]
[connection signal="pressed" from="craftButton" to="." method="_on_craft_button_pressed"]
